--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   freezed: ^2.4.7
   google_sign_in: any
-  firebase_auth: any
-  firebase_core:
+
   flutter_bloc: ^8.1.4
   get_it:
   flutter_facebook_auth: ^6.1.1
@@ -26,7 +25,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   injectable: ^2.3.2
   webview_flutter: ^4.5.0
-  url_launcher: ^6.2.4
+
   app_settings: ^5.1.1
 
 
@@ -45,8 +44,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-     - assets/
+  #assets:
+   #  - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
